[package]
name = "eip1193"
version = "0.1.0"
authors = ["Ryan.K <ryankung@ieee.org>"]
edition = "2018"
license = "GPL-2.0"
keywords = ["wasm", "EIP1193", "Ethereum"]
categories = ["api-binding", "wasm", "web-programming"]
readme = "README.md"
repository = "https://github.com/DrHongos/EIP1193_rs"
exclude = ["build/**/*.o", "doc/**/*.html"]
include = ["src/**/*", "Cargo.toml"]
description ="This package implementated a bridge for Ethereum Providers (EIP1193)."

[dependencies]
js-sys = "0.3.65"
wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  #?
serde-wasm-bindgen = "0.6.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib", "rlib"]
